@@ -26,10 +26,12 @@
 27,4	//AL_WARP
 87,4	//WZ_ICEWALL
 150,4	//TF_BACKSLIDING
+290,4	//SA_ABRACADABRA
 361,4	//HP_ASSUMPTIO
 362,4	//HP_BASILICA
 395,4	//CG_MOONLIT
 491,4	//CR_CULTIVATION
+530,4	//NJ_KIRIKAGE
 691,4	//CASH_ASSUMPTIO
 
 //BATTLEGROUND
